objects/slackv2__Message_Destination__c.object
<CustomObject>
    <fields>
        <fullName>slackv2__Channel_Id__c</fullName>
        <label>Channel Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Channel_Name__c</fullName>
        <label>Channel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Channel_Type__c</fullName>
        <label>Channel Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Slack_Auth__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Slack Auth</label>
        <referenceTo>slackv2__Slack_Auth__c</referenceTo>
        <relationshipLabel>Message Destinations</relationshipLabel>
        <relationshipName>Message_Destinations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Message Destination</label>
    <nameField>
        <label>Message Destination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Destinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>